objects/PROSAgreement__AgSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>PROSAgreement__AppPortalAgAppId__c</fullName>
        <label>AppPortal Ag Application Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__BaseUrl__c</fullName>
        <label>Base Url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__CustomizeAgreementId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customize Agreement Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__EnableDebugLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Debug Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__MPC_Email_Template__c</fullName>
        <description>Email template name for Mass Price Change email alert</description>
        <label>Mass Price Change Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PROS Agreement Settings</label>
</CustomObject>